--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/grandstander": "^5.0.19",
+    "@fontsource/sniglet": "^5.0.8",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@mui/material": "^5.15.4",
     "@next/mdx": "^14.0.4",
     "@types/mdx": "^2.0.10",
     "@types/react": "^18.2.47",
+    "@types/seedrandom": "^3.0.8",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-frontmatter": "^5.0.0",
-    "remark-mdx-frontmatter": "^4.0.0"
+    "remark-mdx-frontmatter": "^4.0.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/argparse": "^2.0.14",
