--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "dev:server": "next dev",
     "build": "yarn gen && next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "gen": "tsx src/codegen/index-content.ts",
