--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@fontsource/sniglet": "^5.0.8",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.4",
     "@next/mdx": "^14.0.4",
     "@types/mdx": "^2.0.10",
     "@types/react": "^18.2.47",
     "@types/seedrandom": "^3.0.8",
+    "devicon": "^2.16.0",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
