--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gray-matter": "^4.0.3",
     "nodemon": "^3.0.2",
     "sass": "^1.69.7",
+    "serve": "^14.2.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "5.3.3"
